Implementacion/prueba.txt
gcc ProgramaPrincipal.cpp Agenda.cpp Cliente.cpp -g -o ProgramaPrincipal
Agenda.cpp: In member function ‘bool Agenda::ordenarClientes()’:
Agenda.cpp:378:39: error: no matching function for call to ‘std::list<Cliente>::sort(<unresolved overloaded function type>)’
  arrayClientes_.sort(funcionOrdenacion);
                                       ^
Agenda.cpp:378:39: note: candidates are:
In file included from /usr/include/c++/4.8/list:64:0,
                 from Agenda.h:13,
                 from Agenda.cpp:8:
/usr/include/c++/4.8/bits/list.tcc:353:5: note: void std::list<_Tp, _Alloc>::sort() [with _Tp = Cliente; _Alloc = std::allocator<Cliente>]
     list<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/list.tcc:353:5: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/bits/list.tcc:430:7: note: void std::list<_Tp, _Alloc>::sort(_StrictWeakOrdering) [with _StrictWeakOrdering = bool (Agenda::*)(const Cliente&, const Cliente&); _Tp = Cliente; _Alloc = std::allocator<Cliente>]
       list<_Tp, _Alloc>::
       ^
/usr/include/c++/4.8/bits/list.tcc:430:7: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘bool (Agenda::*)(const Cliente&, const Cliente&)’
make: *** [ProgramaPrincipal] Error 1
